# cri

./: CMakeLists.txt  FindOGRE.cmake  FindOIS.cmake  FindOgreProcedural.cmake  README.md  config.xml  libxt-dev  mainpage.dox  manifest.xml  resources.cfg
graphics/: icons.material  skybox.material  surfaces.material
graphics/example_robot/urdf/: wam.urdf
graphics/layouts/: main.layout
graphics/meshes/: Dalek.stl  table.stl
msg/: MarkerScript.msg  UseURDF.msg
src/converters/RobotModel/: RobotModel.cpp  RobotModel.hpp  RobotModelMain.cpp
src/cri/: CRI.cpp  CRI.h  CRIExceptions.h  CRIMain.cpp  CRIMain.h  IntersectionMath.cpp  IntersectionMath.h  MovableText.cpp  MovableText.h  OgreTools2.cpp  OgreTools2.h  OgreUtilities.h  PyBlock.cpp  PyBlock.h  ROSTools.cpp  ROSTools.h  scratch.txt  validate_floats.h
src/cri/gadgets/: GActiveMarker.cpp  GActiveMarker.h  GActiveMarkerScripts.cpp  GFrame.cpp  GFrame.h  GGrid.cpp  GGrid.h  GGridCells.cpp  GGridCells.h  GPath.cpp  GPath.h  GPointCloud.cpp  GPointCloud.h  GQuiver.cpp  GQuiver.h  GReticle.cpp  GReticle.h  GReticleAxes.cpp  GTextureQuad.cpp  GTextureQuad.h
src/python/: AddTopicDialog2.py  ExecAddTopicDialog.py  ExecKeyAssignDialog.py  ExecListGadgetsDialog.py  ExecListSelectionsDialog.py  ExecMainMenuDialog.py  ExecQuit.py  GeneralSettingsDialog.py  ImportURDFDialog.py  Initialize.py  KeyAssignDialog.py  LaunchPropertiesDialog.py  ListGadgetsDialog2.py  ListSelectionsDialog.py  LoadState.py  MainMenuDialog.py  PCSettingsDialog.py  PickAssignDialog.py  QApplicationLoop.py  QuiverSettingsDialog.py  ReticleSettingsDialog.py  SaveState.py  SettingsMenuDialog.py  StatusDialog.py  TFFramesDialog.py  WaitForQApplication.py
src/python/DefaultPickScripts/: OrbitGridPoint.py  SelectDirection.py
src/tutorials/battle_pr2/: main.cpp
src/tutorials/technology_test/: InitBubble.py  technology_test.cpp
